src/test/ui/compile-fail-migration/extoption_env-no-args.stderr
error: option_env! takes 1 argument
  --> $DIR/extoption_env-no-args.rs:11:13
   |
LL | fn main() { option_env!(); } //~ ERROR: option_env! takes 1 argument
   |             ^^^^^^^^^^^^^^

error: aborting due to previous error

